First working end-to-end version.

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ backcall==0.1.0
 bleach==3.1.0
 bz2file==0.98
 colorama==0.4.1
+cycler==0.10.0
 decorator==4.4.0
 defusedxml==0.6.0
 entrypoints==0.3
@@ -18,11 +19,14 @@ jupyter==1.0.0
 jupyter-client==5.2.4
 jupyter-console==6.0.0
 jupyter-core==4.4.0
+kiwisolver==1.1.0
 MarkupSafe==1.1.1
+matplotlib==3.1.0
 mistune==0.8.4
 nbconvert==5.5.0
 nbformat==4.4.0
 notebook==5.7.8
+numpy==1.16.4
 pandocfilters==1.4.2
 parso==0.4.0
 pickleshare==0.7.5
@@ -30,6 +34,7 @@ prometheus-client==0.7.0
 prompt-toolkit==2.0.9
 py4j==0.10.7
 Pygments==2.4.2
+pyparsing==2.4.0
 pyrsistent==0.15.2
 pyspark==2.3.3
 python-dateutil==2.8.0
